syntax = "proto3";

option csharp_namespace = "GrpcService.Protos";

service UserService {
  rpc ListUsers (Empty) returns (UserList);
  rpc DeleteUser (UserId) returns (Empty);
}

message Empty {}

message UserId {
  string Id = 1;
}

message User {
  string Id = 1;
  string Username = 2;
  string FirstName = 3;
  string LastName = 4;
}

message UserList {
  repeated User Users = 1;
}
